<resources>
    <string name="app_name">DoLegal</string>
    <string name="image">image</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play_again">Play Again</string>
    <string name="you_ve_won_a_prize">You\'ve won a prize!</string>
    <string name="winner">Winner</string>
    <string name="congratulations">Congratulations!</string>
    <string name="next_story">Next Story</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="suspendisse_ultrices_metus_ut_risus_congue_et_congue_turpis_ultricies_pellentesque_ut_sagittis_eros_ut_nibh_leo_hdu_kolg_jokeig_ldkgiro_lseito">Suspendisse ultrices metus ut risus congue, et congue turpis ultricies. Pellentesque ut sagittis eros. Ut nibh leo hdu kolg jokeig ldkgiro lseito</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>