<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/back"
    tools:context=".StoryActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#95FFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/s_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/s_image"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/s_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/adamina"
                        android:padding="5dp"
                        android:text="@string/suspendisse_ultrices_metus_ut_risus_congue_et_congue_turpis_ultricies_pellentesque_ut_sagittis_eros_ut_nibh_leo_hdu_kolg_jokeig_ldkgiro_lseito"
                        android:textColor="#37474F"
                        android:textSize="24sp"
                        tools:ignore="TextContrastCheck,VisualLintLongText" />
                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/s_prev"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#AAD3FF"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/previous"
        android:textColor="#455A64"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/s_next"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#AAD3FF"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/next"
        android:textColor="#455A64"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>